[gd_scene load_steps=5 format=2]

[ext_resource path="res://BiomeList.tscn" type="PackedScene" id=1]
[ext_resource path="res://ChunkManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://menu_arrow.png" type="Texture" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 800, 480 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="ChunkManager" parent="." instance=ExtResource( 2 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="ExpandArrow" type="PanelContainer" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 325.0
margin_top = -40.0
margin_right = 355.0
margin_bottom = -10.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowTexture" type="TextureRect" parent="UI/ExpandArrow"]
margin_left = 7.0
margin_top = 7.0
margin_right = 23.0
margin_bottom = 23.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldGenSettings" type="Panel" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -587.0
margin_right = 328.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="UI/WorldGenSettings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/WorldGenSettings/MarginContainer"]
margin_right = 298.0
margin_bottom = 557.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BiomeList" parent="UI/WorldGenSettings/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 298.0

[node name="PanelContainer" type="PanelContainer" parent="UI/WorldGenSettings/MarginContainer/VBoxContainer"]
margin_top = 335.0
margin_right = 298.0
margin_bottom = 395.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/WorldGenSettings/MarginContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 291.0
margin_bottom = 53.0

[node name="SeaLevel" type="HBoxContainer" parent="UI/WorldGenSettings/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 284.0
margin_bottom = 46.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SeaLevelLabel" type="Label" parent="UI/WorldGenSettings/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/SeaLevel"]
margin_top = 16.0
margin_right = 80.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 0 )
text = "Sea level"

[node name="SeaLevelSlider" type="HSlider" parent="UI/WorldGenSettings/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/SeaLevel"]
margin_left = 84.0
margin_right = 284.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -1.0
max_value = 1.0
step = 0.01
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="UI/WorldGenSettings/MarginContainer/VBoxContainer"]
margin_top = 410.0
margin_right = 298.0
margin_bottom = 502.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Height" type="VBoxContainer" parent="UI/WorldGenSettings/MarginContainer/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Octaves" type="HBoxContainer" parent="UI/WorldGenSettings/MarginContainer/VBoxContainer/TabContainer/Height"]
margin_right = 290.0
margin_bottom = 16.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OctavesLabel" type="Label" parent="UI/WorldGenSettings/MarginContainer/VBoxContainer/TabContainer/Height/Octaves"]
margin_top = 1.0
margin_right = 80.0
margin_bottom = 15.0
rect_min_size = Vector2( 80, 0 )
text = "Octaves"

[node name="OctavesSlider" type="HSlider" parent="UI/WorldGenSettings/MarginContainer/VBoxContainer/TabContainer/Height/Octaves"]
margin_left = 84.0
margin_right = 290.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 1.0
max_value = 9.0
value = 7.0
rounded = true
tick_count = 9
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Period" type="HBoxContainer" parent="UI/WorldGenSettings/MarginContainer/VBoxContainer/TabContainer/Height"]
margin_top = 20.0
margin_right = 290.0
margin_bottom = 36.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PeriodLabel" type="Label" parent="UI/WorldGenSettings/MarginContainer/VBoxContainer/TabContainer/Height/Period"]
margin_top = 1.0
margin_right = 80.0
margin_bottom = 15.0
rect_min_size = Vector2( 80, 0 )
text = "Period"

[node name="PeriodSlider" type="HSlider" parent="UI/WorldGenSettings/MarginContainer/VBoxContainer/TabContainer/Height/Period"]
margin_left = 84.0
margin_right = 290.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 1.0
max_value = 300.0
step = 0.01
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Persistence" type="HBoxContainer" parent="UI/WorldGenSettings/MarginContainer/VBoxContainer/TabContainer/Height"]
margin_top = 40.0
margin_right = 290.0
margin_bottom = 56.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PersistenceLabel" type="Label" parent="UI/WorldGenSettings/MarginContainer/VBoxContainer/TabContainer/Height/Persistence"]
margin_top = 1.0
margin_right = 80.0
margin_bottom = 15.0
rect_min_size = Vector2( 80, 0 )
text = "Persistence"

[node name="PersistenceSlider" type="HSlider" parent="UI/WorldGenSettings/MarginContainer/VBoxContainer/TabContainer/Height/Persistence"]
margin_left = 84.0
margin_right = 290.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.01
value = 0.55
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenerateButton" type="Button" parent="UI/WorldGenSettings/MarginContainer/VBoxContainer"]
margin_top = 517.0
margin_right = 298.0
margin_bottom = 557.0
rect_min_size = Vector2( 0, 40 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Generate"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="UI/ExpandArrow" to="." method="_on_ExpandArrow_gui_input"]
[connection signal="pressed" from="UI/WorldGenSettings/MarginContainer/VBoxContainer/GenerateButton" to="." method="_on_GenerateButton_pressed"]
